# TheBranchDriftCatalyst

./: README.md  catalyst_repo.yaml
.bin/: .gitignore  GENERATOR_README.md  config.yml  generate.py  generate.sh  pyproject.toml  requirements.txt  shields.json
.bin/tests/: test_generate.py
.claude/: settings.local.json
.github/workflows/: generate-profile.yml
